--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "grunt-contrib-cssmin": ">=0.10.0",
     "grunt-contrib-sass": ">=0.7.4",
     "grunt-contrib-uglify": ">=0.5.0",
-    "grunt-contrib-watch": ">=0.6.1"
+    "grunt-contrib-watch": ">=0.6.1",
+    "grunt-processhtml": "^0.3.3"
   },
   "description": "Grunt/Sass frontend boiler.",
   "repository": {
@@ -16,7 +17,7 @@
     "url": "https://github.com/ab7/grunt-web-boiler"
   },
   "keywords": [
-    ""
+    "grunt", "web", "boiler"
   ],
   "author": "Alex Baker",
   "license": "MIT",
