--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": ">=0.4.5",
     "grunt-autoprefixer": ">=1.0.0",
     "grunt-contrib-concat": ">=0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": ">=0.10.0",
     "grunt-contrib-sass": ">=0.7.4",
     "grunt-contrib-uglify": ">=0.5.0",
@@ -17,7 +18,9 @@
     "url": "https://github.com/ab7/grunt-web-boiler"
   },
   "keywords": [
-    "grunt", "web", "boiler"
+    "grunt",
+    "web",
+    "boiler"
   ],
   "author": "Alex Baker",
   "license": "MIT",
