--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grunt-web-boiler",
+  "name": "static-boilerplate",
   "version": "1.0.0",
   "devDependencies": {
     "grunt": ">=0.4.5",
@@ -12,20 +12,19 @@
     "grunt-contrib-watch": ">=0.6.1",
     "grunt-processhtml": "^0.3.3"
   },
-  "description": "Grunt/Sass frontend boiler.",
+  "description": "Static website boilerplate.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ab7/grunt-web-boiler"
+    "url": "https://github.com/ab7/static-boilerplate"
   },
   "keywords": [
-    "grunt",
-    "web",
-    "boiler"
+    "static",
+    "boilerplate"
   ],
   "author": "Alex Baker",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ab7/grunt-web-boiler/issues"
+    "url": "https://github.com/ab7/static-boilerplate/issues"
   },
   "homepage": "http://www.alexbakertech.com"
 }
